<resources>
    <string name="app_name">Color Picker</string>
    <string name="screen_capture_permission_denied">Screen capture permission denied</string>
    <string name="overlay_permission">Overlay Permission</string>
    <string name="overlay_permission_description">Please grant \"Draw over other apps\" permission for \"Color Picker\" app</string>
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="notification_permission_description">Please open permissions section of \"Color Picker\" and grant notification permission</string>
    <string name="color">Color</string>
    <string name="coordinates">Coordinates</string>
    <string name="copied">%1$s copied</string>
    <string name="color_picker_active">Color Picker Active</string>

    <!-- Preferences -->
    <string name="pref_magnifier_size_title">Magnifier Size</string>
    <string name="pref_capture_range_title">Capture Range</string>
    <string name="pref_capture_speed_title">Capture Speed</string>
    <string name="pref_show_grid_lines_title">Show Grid Lines</string>
    <string name="pref_show_grid_lines_summary">Display grid lines on magnifier</string>
    <string name="start_color_picker">Start Color Picker</string>
    <string name="running">Running</string>
    <string name="stopped">Stopped</string>
    <string name="tips">1. Both text and icon on the magnifier are clickable.\n2. Swipe on magnifier for precise fine-tuning.\n3. If your phone lags when picking colors, reduce capture speed.\n4. If you are asked to select a single app or entire screen, select entire screen.</string>
    <string name="tips_label">Tips</string>
</resources>